[project]
name = "keymap-drawer"
version = "0.20.0"
description = "A module and CLI tool to help parse and draw keyboard layouts."
authors = [{name = "Cem Aksoylar", email = "caksoylar@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.0.0,<3.0.0)",
    "pcpp (>=1.30,<2.0)",
    "pyyaml (>=6.0,<7.0)",
    "platformdirs (>=4.0.0,<5.0.0)",
    "pydantic-settings (>=2.2.1,<3.0.0)",
    "tree-sitter (>=0.23.2,<0.24.0)",
    "tree-sitter-devicetree (>=0.12.1,<0.13.0)"
]

[project.optional-dependencies]
dev = ["mypy", "pylint", "black", "pylint-pydantic", "types-pyyaml", "deptry", "hjson"]
lsp = ["python-lsp-server"]

[project.scripts]
keymap = 'keymap_drawer.__main__:main'

[project.urls]
homepage = "https://github.com/caksoylar/keymap-drawer"
repository = "https://github.com/caksoylar/keymap-drawer"
issues = "https://github.com/caksoylar/keymap-drawer/issues"
releasenotes = "https://github.com/caksoylar/keymap-drawer/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
include = [{path = "resources", format = ["sdist", "wheel"]}]

[tool.pylint.master]
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.pylint.basic]
good-names = "x,y,w,h,r,f,k,v,p,m,c"
max-line-length = 120

[tool.pylint."messages control"]
disable = ["too-few-public-methods", "line-too-long", "too-many-arguments", "too-many-positional-arguments"]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.black]
line-length = 120

[tool.isort]
src_paths = ["keymap_drawer"]
profile = "black"
line_length = 120
